# XPlane-Plugin-Template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  plugin.cpp  plugin.h
